// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerificationCodeRow renders correctly for accepted code 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "padding": 16,
      },
      Object {
        "borderRadius": 8,
      },
      undefined,
      Array [
        Object {
          "backgroundColor": "rgba(103, 99, 86, 0.1)",
          "padding": 0,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "borderRadius": 8,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "padding": 16,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#A49B80",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 13,
              "lineHeight": 16,
              "marginBottom": 4,
              "opacity": 0.5,
            }
          }
        >
          Test label
        </Text>
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "#A49B80",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          q4BJuVrALpiaroth/dwQ/ps6w8auvNPmi+SVVwstPaFaq8aRq4jeaWSPmI+rZTrJQ/Z0BOUyz9EBNif1Y2XzZQE=
        </Text>
      </View>
      <View
        style={
          Object {
            "marginLeft": 4,
            "width": 32,
          }
        }
      >
        <svg
          fill="none"
          height={32}
          style={Object {}}
          viewBox="0 0 32 32"
          width={32}
        >
          <path
            d="M8.414 15.086a2 2 0 10-2.828 2.828l2.828-2.828zM12.5 22l-1.414 1.414a2 2 0 002.8.029L12.5 22zm13.885-10.557a2 2 0 00-2.77-2.886l2.77 2.886zm-20.8 6.471l5.5 5.5 2.83-2.828-5.5-5.5-2.83 2.828zm8.3 5.529l12.5-12-2.77-2.886-12.5 12 2.77 2.886z"
            fill="#42D689"
            style={Object {}}
          />
        </svg>
      </View>
    </View>
  </View>
</View>
`;

exports[`VerificationCodeRow renders correctly for input 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "padding": 16,
      },
      Object {
        "borderRadius": 8,
      },
      undefined,
      Array [
        Object {
          "backgroundColor": "rgba(103, 99, 86, 0.1)",
          "padding": 0,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "borderRadius": 8,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "padding": 16,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#A49B80",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 13,
              "lineHeight": 16,
              "marginBottom": 4,
              "opacity": 0.5,
            }
          }
        >
          Test label
        </Text>
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "#A49B80",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          ab8049b95ac02e989aae8b61fddc10fe9b3ac3c6aebcd3e68be495570b2d3da15aabc691ab88de69648f988fab653ac943f67404e532cfd1013627f56365f36501
        </Text>
      </View>
      <View
        style={
          Object {
            "marginLeft": 4,
            "width": 32,
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#1AB775"
          hidesWhenStopped={true}
          size="small"
        />
      </View>
    </View>
  </View>
</View>
`;
